Bug 1576562 - Convert icons from background-image so they are displayed in high contrast mode. r=johannh
Differential Revision: https://phabricator.services.mozilla.com/D43669

UltraBlame original commit: 1268324809b4f36078337193ab7becc3e67fffb3

--- a/browser/components/protections/content/protections.css
+++ b/browser/components/protections/content/protections.css
@@ -442,6 +442,14 @@ columns
 7fr
 ;
 }
+.
+etp
+-
+card
+.
+icon
+.
+dark
 a
 .
 hidden
@@ -577,21 +585,7 @@ button
 .
 loading
 .
-card
--
-title
-.
-loading
-.
-content
-.
-loading
-.
-monitor
--
-scanned
--
-text
+wrapper
 {
 display
 :
@@ -607,7 +601,7 @@ width
 ;
 height
 :
-60px
+auto
 ;
 grid
 -
@@ -625,43 +619,6 @@ z
 index
 :
 1
-;
-}
-.
-etp
--
-card
-.
-icon
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-content
-/
-logos
-/
-tracking
--
-protection
-.
-svg
-"
-)
-no
--
-repeat
-center
-/
-contain
 ;
 }
 supports
@@ -761,112 +718,29 @@ etp
 card
 .
 icon
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-content
-/
-logos
-/
-tracking
--
-protection
--
+.
 dark
--
-theme
-.
-svg
-"
-)
-no
--
-repeat
-center
-/
-contain
+{
+display
+:
+block
 ;
 }
-}
-}
 .
-lockwise
+etp
 -
 card
 .
 icon
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-content
-/
-logos
-/
-lockwise
 .
-svg
-"
-)
-no
--
-repeat
-center
-/
-cover
+light
+{
+display
+:
+none
 ;
 }
-.
-monitor
--
-card
-.
-icon
-{
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-content
-/
-logos
-/
-monitor
-.
-svg
-"
-)
-no
--
-repeat
-center
-/
-cover
-;
+}
 }
 .
 card
@@ -1016,12 +890,6 @@ default
 protection
 -
 details
-.
-inline
--
-text
--
-icon
 {
 padding
 :
@@ -1393,6 +1261,12 @@ radius
 overflow
 :
 hidden
+;
+outline
+:
+1px
+solid
+transparent
 ;
 }
 .
@@ -1937,12 +1811,6 @@ end
 legend
 label
 {
-display
-:
-inline
--
-block
-;
 margin
 -
 bottom
@@ -1953,7 +1821,7 @@ bottom
 padding
 :
 15px
-23px
+0px
 ;
 padding
 -
@@ -1978,45 +1846,11 @@ properties
 :
 fill
 ;
-background
--
-repeat
+display
 :
-no
+inline
 -
-repeat
-;
-background
--
-position
-:
-left
-center
-;
-background
--
-size
-:
-16px
-;
-}
-[
-dir
-=
-"
-rtl
-"
-]
-#
-legend
-label
-{
-background
--
-position
-:
-right
-center
+block
 ;
 }
 #
@@ -2033,6 +1867,71 @@ outline
 none
 ;
 }
+.
+icon
+-
+small
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+display
+:
+inline
+-
+block
+;
+vertical
+-
+align
+:
+middle
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
+margin
+-
+inline
+-
+end
+:
+2px
+;
+}
+label
+span
+{
+margin
+-
+inline
+-
+start
+:
+1px
+;
+display
+:
+inline
+-
+block
+;
+}
 label
 [
 data
@@ -2043,28 +1942,11 @@ type
 social
 "
 ]
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-controlcenter
-/
-socialblock
 .
-svg
-)
-;
+icon
+-
+small
+{
 fill
 :
 var
@@ -2087,28 +1969,11 @@ type
 cookie
 "
 ]
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-controlcenter
-/
-3rdpartycookies
 .
-svg
-)
-;
+icon
+-
+small
+{
 fill
 :
 var
@@ -2131,30 +1996,11 @@ type
 tracker
 "
 ]
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-controlcenter
-/
-tracker
--
-image
 .
-svg
-)
-;
+icon
+-
+small
+{
 fill
 :
 var
@@ -2177,28 +2023,11 @@ type
 fingerprinter
 "
 ]
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-controlcenter
-/
-fingerprinters
 .
-svg
-)
-;
+icon
+-
+small
+{
 fill
 :
 var
@@ -2221,28 +2050,11 @@ type
 cryptominer
 "
 ]
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-controlcenter
-/
-cryptominers
 .
-svg
-)
-;
+icon
+-
+small
+{
 fill
 :
 var
@@ -2953,105 +2765,6 @@ gap
 ;
 }
 .
-inline
--
-text
--
-icon
-{
--
-moz
--
-context
--
-properties
-:
-fill
-;
-fill
-:
-currentColor
-;
-background
--
-size
-:
-16px
-16px
-;
-background
--
-repeat
-:
-no
--
-repeat
-;
-background
--
-position
--
-x
-:
-3px
-;
-background
--
-position
--
-y
-:
-5px
-;
-padding
-:
-4px
-;
-padding
--
-inline
--
-start
-:
-24px
-;
-}
-[
-dir
-=
-"
-rtl
-"
-]
-#
-protection
--
-details
-[
-dir
-=
-"
-rtl
-"
-]
-.
-inline
--
-text
--
-icon
-{
-background
--
-position
--
-x
-:
-100
-%
-;
-}
-.
 lockwise
 -
 mobile
@@ -3072,37 +2785,6 @@ fill
 fill
 :
 currentColor
-;
-background
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-content
-/
-logos
-/
-lockwise
--
-mobile
--
-app
-.
-svg
-"
-)
-no
--
-repeat
-center
-/
-cover
 ;
 width
 :
@@ -3132,63 +2814,13 @@ max
 -
 content
 ;
-}
-.
-passwords
+padding
 -
-stored
+inline
 -
-text
-{
-background
--
-image
+start
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-login
-.
-svg
-"
-)
-;
-}
-.
-synced
--
-devices
--
-text
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-sync
-.
-svg
-"
-)
+4px
 ;
 }
 .
@@ -3397,27 +3029,6 @@ scanned
 -
 text
 {
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-reload
-.
-svg
-"
-)
-;
 font
 -
 size
@@ -3566,33 +3177,6 @@ AB71FF
 ;
 }
 .
-email
-.
-monitor
--
-icon
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-mail
-.
-svg
-)
-;
-}
-.
 breaches
 {
 background
@@ -3616,35 +3200,6 @@ gradient
 ;
 }
 .
-breaches
-.
-monitor
--
-icon
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-fxa
-/
-avatar
-.
-svg
-)
-;
-}
-.
 passwords
 {
 background
@@ -3664,33 +3219,6 @@ gradient
 592ACB
 100
 %
-)
-;
-}
-.
-passwords
-.
-monitor
--
-icon
-{
-background
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-login
-.
-svg
 )
 ;
 }
@@ -3792,28 +3320,17 @@ end
 ;
 }
 .
-monitor
--
-stat
-.
-monitor
--
 icon
-{
-background
 -
-size
+med
+{
+width
 :
-24px
 24px
 ;
-background
--
-repeat
+height
 :
-no
--
-repeat
+24px
 ;
 -
 moz
@@ -3839,14 +3356,6 @@ opacity
 .
 65
 ;
-width
-:
-24px
-;
-height
-:
-24px
-;
 display
 :
 block
@@ -3855,11 +3364,17 @@ padding
 :
 5px
 ;
-background
--
-position
+display
 :
-center
+inline
+-
+block
+;
+vertical
+-
+align
+:
+middle
 ;
 }
 .
